src/assets/css/main.css
/* ... */
/** Add line through text decoration to checked checkboxes text div */
.block input[type="checkbox"]:checked+div {
    text-decoration: line-through;
}

/** Remove the default list style and replace by another that works with display flex */
.block ol,
.block ul {
    list-style: none;
}

.block ul .list-item,
.block ol .list-item {
    display: flex;
    flex-direction: row;
    align-items: flex-start;

}

.block ol li {
    counter-increment: item;
}

.block ol li::before {
    content: counter(item) ".";
    margin-right: 0.3125rem;
    display: flex;
    /* width: 18px; */
    justify-content: flex-start;
}

.block ul li:not(.no-list-style)::before {
    content: "•";
    margin-right: 0.3125rem;
    display: flex;
}

.list-item-checkable input {
    margin-right: 0.3125rem;
}


/** and list **/


.drag-handler {
    color: #84888d;
    visibility: hidden;
    cursor: grab;
    align-self: start;
    padding-top: 0.33rem;
    position: absolute;
    opacity: 0.5;
    user-select: none;
}

.drag-handler-wrapper {
    position: relative;
    height: 0;
    width: 0;
    user-select: none;
}

.drag-handler:active {
    cursor: grabbing;
}

.block {
    display: flex !important;
    flex-direction: row;
    margin-bottom: 1rem;
    position: relative;
    max-width: 100%;
}

.block.with-caption {
    flex-direction: column;
}

.block>*:not(.editor-only) {
    padding-left: 1.25rem;
    box-sizing: border-box;
}

.block:hover .drag-handler {
    visibility: visible;
    vertical-align: top;
    justify-content: start;
    transition: visibility 0.2s;
}

.drop-line {
    height: 1rem;
    background-color: #84888d;
    width: 100%;
}


.title h1 {
    margin-left: 1.2rem;
    line-height: 3rem;
}


#johannesEditor [contenteditable="true"]:empty:focus,
#johannesEditor [contenteditable="true"][data-empty="true"]:focus {
    content: attr(data-placeholder);
    color: #84888d;
    pointer-events: none;
}

#johannesEditor h1[data-placeholder] {
    position: relative;
}

#johannesEditor h1[data-placeholder]:empty:before,
#johannesEditor h1[data-placeholder][data-empty="true"]:before {
    content: attr(data-placeholder);
    color: #84888d !important;
    position: absolute;
    left: 1.2rem;
    pointer-events: none;
}

#johannesEditor h1[data-placeholder]:focus:before {}


#johannesEditor *[contenteditable="true"]:not(h1) {
    position: relative;
}

#johannesEditor *[contenteditable="true"]:not(h1):empty:before,
#johannesEditor *[contenteditable="true"]:not(h1)[data-empty="true"]:before {
    content: attr(data-placeholder);
    color: #84888acd;
    position: absolute;
    left: 0;
    pointer-events: none;
    display: none;
}

#johannesEditor .block > *[contenteditable="true"]:not(h1):empty:before,
#johannesEditor .block > *[contenteditable="true"]:not(h1)[data-empty="true"]:before {
    left: 1.25rem;
}

#johannesEditor *[contenteditable="true"]:not(h1):empty:hover:before,
#johannesEditor *[contenteditable="true"]:not(h1)[data-empty="true"]:hover:before {
    display: block;
}

#johannesEditor cite[contenteditable="true"]:empty:before,
#johannesEditor cite[contenteditable="true"][data-empty="true"]:before {
    display: block;
}

#johannesEditor *[contenteditable="true"]:not(h1)[data-placeholder]:empty:focus:before,
#johannesEditor *[contenteditable="true"]:not(h1)[data-placeholder][data-empty="true"]:focus:before {
    content: attr(data-placeholder);
    color: #84888acd !important;
    position: absolute;
    left: 0;
    pointer-events: none;
    display: block;
}

.callout-text[data-placeholder],
.code-block code[data-placeholder] {
    position: relative;
}

.callout-text[data-placeholder]:empty:before,
.callout-text[data-placeholder][data-empty="true"]:before,
.code-block code[data-placeholder]:empty:before,
.code-block code[data-placeholder][data-empty="true"]:before {
    content: attr(data-placeholder) !important;
    position: absolute;
    left: 0;
    pointer-events: none;
    display: block !important;
}

#johannesEditor li.div[contenteditable="true"] {
    position: relative;
}

#johannesEditor li.div[contenteditable="true"]:empty:hover:before,
#johannesEditor li.div[contenteditable="true"][data-empty="true"]:hover:before {
    content: attr(data-placeholder);
    color: #84888acd;
    position: absolute;
    left: 0;
    pointer-events: none;
    display: block;
}



h1 {
    font-size: 2.5rem;
    font-weight: bolder !important;
}

.content {
    width: 100%;
    box-sizing: border-box;
}

.content .block .table-wrapper {
    overflow-x: auto;
    overflow-y: hidden;
}


[contenteditable] {
    outline: none;
}

body {
    background-color: white;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    margin-bottom: 200px;
}


.editor {
    display: flex;
    margin-top: 80px;
}

p {
    color: #242424;
}

.block,
.block * {
    user-select: text;
}

.johannes-content-element,
.list-item {

    min-height: 1lh;
}

.johannes-content-element {
    width: 100%;
    padding: 0;
    margin: 0;
}


#johannesEditor {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}

.johannes-editor hr {
    width: 100%;
    height: 2px;
    visibility: visible;
    border: none;
    border-bottom: 1px solid rgba(55, 53, 47, 0.16);
}



.johannes-editor blockquote {
    margin: 0.5rem 0;
    padding-left: 20px;
    border-left: 4px solid rgb(55, 53, 47);
    font-style: italic;
    display: block;
}

.johannes-editor cite {
    padding-top: 1rem !important;
    display: inline-block;
}


.johannes-editor cite::before {
    content: '— ';
}


#linkBox {
    z-index: 999999;
    width: fit-content;
    background-color: white;
}

#linkBox .header {
    border-bottom: 1px solid rgba(55, 53, 47, 0.16);
    padding: 10px 20px;
    font-size: 0.86rem;
    color: #37352fd9;
    font-weight: 600;
}
/* ... */

